<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <PreferenceCategory
        android:enabled="false"
        android:key="preference_category_options"
        android:title="@string/preference_apply_xposed_options">
        <Preference
            android:key="preference_refresh"
            android:title="@string/preference_apply_xposed_refresh_icons"/>

        <Preference
            android:key="preference_clear_nova_cache"
            android:summary="@string/preference_apply_xposed_clear_nova_cache_summary"
            android:title="@string/preference_apply_xposed_clear_nova_cache"/>

        <Preference
            android:key="preference_reboot"
            android:summary="@string/preference_apply_xposed_reboot_summary"
            android:title="@string/preference_apply_xposed_reboot"/>

        <Preference
            android:key="preference_selinux"
            android:summary="@string/preference_apply_xposed_selinux_summary"
            android:title="@string/preference_apply_xposed_selinux"/>
    </PreferenceCategory>
</PreferenceScreen>