<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <PreferenceCategory
        android:key="preference_category_options"
        android:layout="@layout/layout_preference_category_card"
        android:title="@string/options">

        <Preference
            android:icon="@drawable/ic_color_lens_grey_600_24dp"
            android:key="preference_apply"
            android:layout="@layout/layout_preference_card"
            android:title="@string/action_apply_icons"/>

        <Preference
            android:icon="@drawable/ic_restore_grey_600_24dp"
            android:key="preference_restore"
            android:layout="@layout/layout_preference_card"
            android:title="@string/action_restore_to_default"/>

        <SwitchPreference
            android:icon="@drawable/ic_photo_size_select_large_grey_600_24dp"
            android:key="preference_normalize_icon_size"
            android:layout="@layout/layout_preference_card"
            android:summary="@string/apply_normalize_icon_size_summary"
            android:title="@string/apply_normalize_icon_size_title"/>

        <SwitchPreference
            android:icon="@drawable/ic_remove_circle_grey_600_24dp"
            android:key="preference_disable_round"
            android:layout="@layout/layout_preference_card"
            android:summary="@string/apply_pixel_disable_round_summary"
            android:title="@string/action_disable_round_icon"/>

        <SwitchPreference
            android:icon="@drawable/ic_work_grey_600_24dp"
            android:key="preference_disable_work"
            android:layout="@layout/layout_preference_card"
            android:summary="@string/apply_disable_work_summary"
            android:title="@string/apply_disable_work_title"/>

        <Preference
            android:icon="@drawable/ic_redo_grey_600_24dp"
            android:key="preference_skip"
            android:layout="@layout/layout_preference_card_last"
            android:summary="@string/apply_skip_summary"
            android:title="@string/apply_skip_title"/>
    </PreferenceCategory>
</PreferenceScreen>