<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_view_module_black_24dp"
        android:id="@+id/nav_item_icon"
        android:title="@string/nav_item_icon"/>

    <item
        android:icon="@drawable/ic_input_black_24dp"
        android:id="@+id/nav_item_apply"
        android:title="@string/nav_item_apply"/>

    <item
        android:icon="@drawable/ic_mail_black_24dp"
        android:id="@+id/nav_item_feedback"
        android:title="@string/nav_item_feedback"/>

    <item
        android:icon="@drawable/ic_settings_black_24dp"
        android:id="@+id/nav_item_settings"
        android:title="@string/nav_item_settings"/>

    <item
        android:icon="@drawable/ic_face_black_24dp"
        android:id="@+id/nav_item_welcome"
        android:title="@string/nav_item_welcome"/>

    <item
        android:icon="@drawable/ic_system_update_black_24dp"
        android:id="@+id/nav_item_update"
        android:title="@string/nav_item_update"/>

    <item
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:id="@+id/nav_item_donate"
        android:title="@string/nav_item_donate"/>

</menu>