<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <PreferenceCategory
        android:title="@string/preference_group_general">
        <Preference
            android:key="preference_general_customize_tabs"
            android:summary="@string/preference_general_customize_tabs_summary"
            android:title="@string/preference_general_customize_tabs"/>

        <Preference
            android:key="preference_general_clear_cache"
            android:title="@string/preference_general_clear_cache"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_group_dev"
        android:title="Dev options">
        <SwitchPreference
            android:key="preference_switch_ui_transparent_nav_bar"
            android:title="Transparent navigation bar"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_group_about">
        <Preference
            android:key="preference_about_app"
            android:title="@string/preference_about_app"/>
        <Preference
            android:key="preference_about_lib"
            android:title="@string/preference_about_lib"/>
    </PreferenceCategory>
</PreferenceScreen>