<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textView_premium_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/materialEditText_premium_info_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/premium_send_dialog_mail_hint"
        android:inputType="textEmailAddress"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/premium_send_dialog_mail_label"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/materialEditText_premium_info_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/premium_send_dialog_note_hint"
        android:inputType="text"
        android:lines="5"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/premium_send_dialog_note_label"/>

</LinearLayout>