<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_feedback_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/root_background"
    android:orientation="vertical"
    tools:context="com.sorcerer.sorcery.iconpack.ui.activities.FeedbackActivity">

    <include layout="@layout/toolbar_universal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_request"
            style="@style/FeedbackRaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/request"/>

        <Button
            android:id="@+id/button_suggest"
            style="@style/FeedbackRaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/suggest"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_feedback_join"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/action_join_google_plus"
        android:textColor="@color/google_plus"/>

</RelativeLayout>
