<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingTop="32dp">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_donate_alipay"
        android:layout_width="@dimen/medium_button_width"
        android:layout_height="@dimen/medium_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_alipay"
        android:gravity="center"
        android:text="@string/alipay"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_donate_wechat"
        android:layout_width="@dimen/medium_button_width"
        android:layout_height="@dimen/medium_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_wechat"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/wechat"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_donate_play"
        android:layout_width="@dimen/medium_button_width"
        android:layout_height="@dimen/medium_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_google_play"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="Google Play"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_donate_bitcoin"
        android:layout_width="@dimen/medium_button_width"
        android:layout_height="@dimen/medium_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_bitcoin"
        android:gravity="center"
        android:text="@string/bitcoin"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:visibility="gone"/>

</LinearLayout>
